[package]
name = "cursor_hero"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*", "other/gamepad_hell", "other/uparrow-enter"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
cursor_hero_cursor_mirror = { path = "./crates/cursor_mirror" }
cursor_hero_hover = { path = "./crates/hover" }
cursor_hero_pressure_plate = { path = "./crates/pressure_plate" }
cursor_hero_level_bounds = { path = "./crates/level_bounds" }
cursor_hero_input = { path = "./crates/input" }
cursor_hero_camera = { path = "./crates/camera" }
cursor_hero_character = { path = "./crates/character" }
cursor_hero_data = { path = "./crates/data" }
cursor_hero_metrics = { path = "./crates/metrics" }
cursor_hero_click_drag_character_movement = { path = "./crates/click_drag_character_movement" }
cursor_hero_physics = { path = "./crates/physics" }
cursor_hero_pointer = { path = "./crates/pointer" }
cursor_hero_screen = { path = "./crates/screen" }
cursor_hero_toolbelt = { path = "./crates/toolbelt" }
cursor_hero_tools = { path = "./crates/tools" }
cursor_hero_ui = { path = "./crates/ui" }
cursor_hero_winutils = { path = "./crates/winutils" }
cursor_hero_restart_memory = { path = "./crates/restart_memory" }
cursor_hero_plugins = { path = "./crates/plugins" }
cursor_hero_icon = { path = "./crates/icon" }
anyhow = "1.0.75"
# bevy = { path = "../bevy", features = ["dynamic_linking"] }
bevy = { path = "../bevy" }
bevy-inspector-egui = { path = "../bevy-inspector-egui/crates/bevy-inspector-egui" }
bevy_xpbd_2d = { path = "../bevy_xpbd/crates/bevy_xpbd_2d", features = [
  "simd",
  "parallel",
] }
crossbeam-channel = "0.5.8"
itertools = "0.12.0"
raw-window-handle = "0.5.2"
leafwing-input-manager = { path = "../leafwing-input-manager" }
windows = "0.51.1"
indexmap = "2.1.0"
image = "0.24.7"
screenshots = "0.8.4"
uiautomation = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32.0", features = ["net", "full"] }
tokio-named-pipes = "0.1.0"
syn = { version = "2.0.48", features = ["full", "visit-mut", "visit"] }
quote = "1.0.35"
proc-macro2 = "1.0.76"
bevy_embedded_assets = { version = "0.9.1", path = "../bevy_embedded_assets"}
winit = "0.28.7"

[dependencies]
cursor_hero_restart_memory = {workspace = true}
cursor_hero_cursor_mirror = {workspace = true}
cursor_hero_hover = {workspace = true}
cursor_hero_pressure_plate = {workspace = true}
cursor_hero_level_bounds = {workspace = true}
cursor_hero_input = {workspace = true}
cursor_hero_camera = {workspace = true}
cursor_hero_character = {workspace = true}
cursor_hero_data = {workspace = true}
cursor_hero_metrics = {workspace = true}
cursor_hero_click_drag_character_movement = {workspace = true}
cursor_hero_physics = {workspace = true}
cursor_hero_pointer = {workspace = true}
cursor_hero_screen = {workspace = true}
cursor_hero_toolbelt = {workspace = true}
cursor_hero_tools = {workspace = true}
cursor_hero_ui = {workspace = true}
cursor_hero_winutils = {workspace = true}
cursor_hero_plugins = {workspace = true}
anyhow = {workspace = true}
bevy = {workspace = true}
bevy-inspector-egui = {workspace = true}
bevy_xpbd_2d = {workspace = true}
syn = {workspace = true}
quote = {workspace = true}
proc-macro2 = {workspace = true}
bevy_embedded_assets = {workspace = true}
cursor_hero_icon = { workspace = true }

[dev-dependencies]
bevy = { workspace = true, features = ["dynamic_linking"] }


[build-dependencies]
embed-resource = "1.6.3"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
