[package]
name = "cursor_hero_character"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursor_hero_glam = { workspace = true }
cursor_hero_camera = { workspace = true }
cursor_hero_input = { workspace = true }
cursor_hero_movement = { workspace = true }
cursor_hero_physics = { workspace = true }
cursor_hero_winutils = { workspace = true}
bevy-inspector-egui = { workspace = true}
bevy = { workspace = true }
bevy_xpbd_2d = { workspace = true }
leafwing-input-manager = { workspace = true }
