[package]
name = "cursor_hero_chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true }
cursor_hero_character_types = { workspace = true }
cursor_hero_toolbelt_types = { workspace = true }
cursor_hero_chat_types = { workspace = true }
cursor_hero_voice_to_text_types = { workspace = true }
cursor_hero_tools = { workspace = true }
leafwing-input-manager = { workspace = true }
cursor_hero_observation_types = { workspace = true }
rand = { workspace = true }
bevy_xpbd_2d = { workspace = true }