[package]
name = "cursor_hero_cursor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursor_hero_character_types = { workspace = true }
cursor_hero_camera = { workspace = true }
cursor_hero_level_bounds = { workspace = true }
cursor_hero_math = { workspace = true }
cursor_hero_bevy = { workspace = true }
cursor_hero_environment_types = { workspace = true }
cursor_hero_input = { workspace = true }
cursor_hero_cursor_types = { workspace = true }
cursor_hero_toolbelt_types = { workspace = true }
cursor_hero_sprint_tool_types = { workspace = true }
cursor_hero_winutils = { workspace = true }
bevy = { workspace = true }
leafwing-input-manager = { workspace = true }
bevy_xpbd_2d = { workspace = true }
bevy_egui = {workspace = true}
bevy-inspector-egui = { workspace = true}
raw-window-handle = {workspace = true }
cursor_hero_worker = { workspace = true }
