[package]
name = "cursor_hero_cursor_mirror"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursor_hero_winutils = { path = "../winutils" }
bevy = { path = "../../../bevy" } # features = ["dynamic_linking"]
