[package]
name = "cursor_hero_fullscreen_tool_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true }
leafwing-input-manager = { workspace = true }
bevy-inspector-egui = { workspace = true }
cursor_hero_toolbelt_types = { workspace = true }
cursor_hero_input = { workspace = true }
cursor_hero_tools = { workspace = true }
