[package]
name = "cursor_hero_glados_tts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true }
cursor_hero_inference_types = { workspace = true }
cursor_hero_glados_tts_types = { workspace = true }
tokio = {workspace = true}
reqwest = {workspace = true}
urlencoding = {workspace = true}
crossbeam-channel = { workspace = true }
cursor_hero_environment_types = {workspace = true}
cursor_hero_pointer_types = {workspace = true}
cursor_hero_math = {workspace = true}
bevy_xpbd_2d = { workspace = true }
rodio = { workspace = true, features=["wav"]}
