[package]
name = "cursor_hero_host_watcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true }
cursor_hero_host_watcher_types = { workspace = true }
cursor_hero_winutils = {workspace = true}
crossbeam-channel = { workspace = true }