[package]
name = "cursor_hero_hover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { workspace = true}
bevy_egui = {workspace = true}
cursor_hero_tools = { workspace = true }
cursor_hero_physics = { workspace = true }
cursor_hero_toolbelt_types = { workspace = true}
cursor_hero_pressure_plate = { workspace = true}
cursor_hero_environment_types = { workspace = true}
cursor_hero_screen = { workspace = true}
cursor_hero_cursor_types = { workspace = true}
cursor_hero_character_types = { workspace = true}
cursor_hero_camera = { workspace = true}
cursor_hero_bevy = { workspace = true}
cursor_hero_ui_automation = { workspace = true}
cursor_hero_winutils = { workspace = true}
bevy = { workspace = true }
itertools = { workspace = true }
bevy-inspector-egui = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
leafwing-input-manager = { workspace = true }
uiautomation = { workspace = true }
windows = { workspace = true, features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Com",
  "Win32_UI_Accessibility",
  "Win32_UI_Input_KeyboardAndMouse",
  "Gaming_Input",
  "Win32_Gaming",
  "Win32_System_Threading",
] }
crossbeam-channel = { workspace = true }
tokio = { workspace = true, features = ["net", "full"] }
tokio-named-pipes = { workspace = true }
bevy_xpbd_2d = { workspace = true }
rand = { workspace = true }
cursor_hero_floaty_nametag_types = { workspace = true }
cursor_hero_worker = { workspace = true }
cursor_hero_ui_hover_types = { workspace = true}