[package]
name = "cursor_hero_inference"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true }
ollama-rs = { workspace = true }
crossbeam-channel = { workspace = true }
cursor_hero_inference_types = {workspace = true}
tokio = {workspace = true}
reqwest = {workspace = true, features=["json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"