[package]
name = "cursor_hero_input"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true }
cursor_hero_host_event_types = { workspace = true}
cursor_hero_pointer_types = { workspace = true}
leafwing-input-manager = { workspace = true }
