[package]
name = "cursor_hero_level_bounds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursor_hero_character = { path = "../character" }
bevy = { path = "../../../bevy" } # features = ["dynamic_linking"]
bevy_xpbd_2d = { path = "../../../bevy_xpbd/crates/bevy_xpbd_2d", features = [
    "simd",
    "parallel",
] }