[package]
name = "cursor_hero_level_bounds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursor_hero_character_types = { workspace = true }
cursor_hero_environment_types = { workspace = true }
bevy = { workspace = true }
bevy_xpbd_2d = { workspace = true }
