[package]
name = "cursor_hero_observation_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true }
chrono = {workspace = true, features=["serde"]}
serde = {workspace = true}
cursor_hero_ui_automation_types = { workspace = true}