[package]
name = "cursor_hero_ollama"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true }
cursor_hero_ollama_types = { workspace = true }
ollama-rs = { workspace = true }
crossbeam-channel = { workspace = true }
cursor_hero_inference_types = {workspace = true}
cursor_hero_math = {workspace = true}
cursor_hero_pointer_types = {workspace = true}
cursor_hero_environment_types = {workspace = true}
cursor_hero_text_asset_types = {workspace = true}
tokio = {workspace = true}
reqwest = {workspace = true, features=["json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bevy_xpbd_2d = { workspace = true }
