[package]
name = "cursor_hero_plugins"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
cursor_hero_ui_hover = { workspace = true }
cursor_hero_ui_hover_types = { workspace = true }
cursor_hero_ui_inspector = { workspace = true }
cursor_hero_ui_inspector_types = { workspace = true }
cursor_hero_worker = { workspace = true }
cursor_hero_worker_types = { workspace = true }
cursor_hero_memory = { workspace = true }
cursor_hero_memory_types = { workspace = true }
cursor_hero_window_swap_tool = { workspace = true }
cursor_hero_window_swap_tool_types = { workspace = true }
cursor_hero_host_fs = { workspace = true }
cursor_hero_host_fs_types = { workspace = true }
cursor_hero_window_position = { workspace = true }
cursor_hero_window_position_types = { workspace = true }
cursor_hero_ui_automation = { workspace = true }
cursor_hero_ui_automation_types = { workspace = true }
cursor_hero_brick = { workspace = true }
cursor_hero_brick_types = { workspace = true }
cursor_hero_fullscreen_tool = { workspace = true }
cursor_hero_fullscreen_tool_types = { workspace = true }
cursor_hero_ui_watcher = { workspace = true }
cursor_hero_ui_watcher_types = { workspace = true }
cursor_hero_floaty_nametag = { workspace = true }
cursor_hero_floaty_nametag_types = { workspace = true }
cursor_hero_host_event = { workspace = true }
cursor_hero_host_event_types = { workspace = true }
cursor_hero_start_menu = { workspace = true }
cursor_hero_start_menu_types = { workspace = true }
cursor_hero_calculator_app = { workspace = true }
cursor_hero_calculator_app_types = { workspace = true }
cursor_hero_app = { workspace = true }
cursor_hero_app_types = { workspace = true }
cursor_hero_secret = { workspace = true }
cursor_hero_secret_types = { workspace = true }
cursor_hero_voice_to_text = { workspace = true }
cursor_hero_voice_to_text_types = { workspace = true }
cursor_hero_glados_tts = { workspace = true }
cursor_hero_glados_tts_types = { workspace = true }
cursor_hero_ollama = { workspace = true }
cursor_hero_ollama_types = { workspace = true }
cursor_hero_text_asset = { workspace = true }
cursor_hero_text_asset_types = { workspace = true }
cursor_hero_environment_types = { workspace = true }
cursor_hero_chat_types = { workspace = true }
cursor_hero_chat = { workspace = true }
cursor_hero_observation_types = { workspace = true }
cursor_hero_observation = { workspace = true }
cursor_hero_inference_types = { workspace = true }
cursor_hero_inference = { workspace = true }
cursor_hero_movement_tool_types = { workspace = true }
cursor_hero_movement_tool = { workspace = true }
cursor_hero_character_types = { workspace = true }
cursor_hero_agent_types = { workspace = true }
cursor_hero_physics_debug = { workspace = true }
cursor_hero_math = { workspace = true }
cursor_hero_version = { workspace = true }
cursor_hero_cursor_types = { workspace = true }
cursor_hero_toolbelt_types = { workspace = true }
cursor_hero_sprint_tool_types = { workspace = true }
cursor_hero_sprint_tool = { workspace = true }
cursor_hero_agent = { workspace = true }
cursor_hero_taskbar = { workspace = true }
cursor_hero_taskbar_tool = { workspace = true }
cursor_hero_taskbar_types = { workspace = true }
cursor_hero_environment_nametag = { workspace = true }
cursor_hero_environment = { workspace = true }
cursor_hero_xelu_prompts = { workspace = true }
cursor_hero_wallpaper = { workspace = true }
cursor_hero_hover = {workspace = true}
cursor_hero_pressure_plate = {workspace = true}
cursor_hero_level_bounds = {workspace = true}
cursor_hero_input = {workspace = true}
cursor_hero_camera = {workspace = true}
cursor_hero_character = {workspace = true}
cursor_hero_data = {workspace = true}
cursor_hero_metrics = {workspace = true}
cursor_hero_click_drag_character_movement = {workspace = true}
cursor_hero_physics = {workspace = true}
cursor_hero_cursor = {workspace = true}
cursor_hero_screen = {workspace = true}
cursor_hero_toolbelt = {workspace = true}
cursor_hero_tools = {workspace = true}
cursor_hero_ui = {workspace = true}
cursor_hero_icon = {workspace = true}
cursor_hero_winutils = {workspace = true}
bevy = {workspace = true}
bevy_embedded_assets = { workspace = true }
bevy-inspector-egui = { workspace = true }
