[package]
name = "cursor_hero_restart_memory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true }
cursor_hero_winutils = { workspace = true }
cursor_hero_character = { workspace = true }
raw-window-handle = { workspace = true }
serde = { workspace = true, features=["derive"] }
serde_json = { workspace = true }