[package]
name = "cursor_hero_screen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursor_hero_metrics = { path = "../metrics" }
cursor_hero_level_bounds = { path = "../level_bounds" }
cursor_hero_winutils = { path = "../winutils" }
bevy = { path = "../../../bevy" } # features = ["dynamic_linking"]
bevy-inspector-egui = { path = "../../../bevy-inspector-egui/crates/bevy-inspector-egui" }
bevy_xpbd_2d = { path = "../../../bevy_xpbd/crates/bevy_xpbd_2d", features = [
    "simd",
    "parallel",
] }
image = "0.24.7"
screenshots = "0.8.4"
