[package]
name = "cursor_hero_screen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursor_hero_metrics = { workspace = true }
cursor_hero_bevy = { workspace = true }
cursor_hero_environment = { workspace = true }
cursor_hero_level_bounds = { workspace = true }
cursor_hero_winutils = { workspace = true}
bevy = { workspace = true }
bevy-inspector-egui = { workspace = true }
bevy_xpbd_2d = { workspace = true }
image = { workspace = true}
screenshots = { workspace = true}
