[package]
name = "cursor_hero_sprint_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true }
cursor_hero_character = { workspace = true }
cursor_hero_sprint_tool_types = { workspace = true }
bevy_xpbd_2d = { workspace = true }
cursor_hero_toolbelt = { workspace = true }
cursor_hero_tools = { workspace = true }
leafwing-input-manager = { workspace = true }
bevy-inspector-egui = { workspace = true }
